--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body{
     background-color:#fff;
 }
 
-.header{
+.nav-bar{
    display: flex;
    justify-content: center;
    height: 70px;
@@ -29,10 +29,12 @@ body{
 .button{
     width: 100px;
     border: none;
-    background-color: #000000;
-    padding: 15px;
+    background-color: #f019d3;
+    padding: 10px;
     border-radius: 5px;
-    
+    margin-top: 15px;
+    margin-right: 15px;
+    font-family: "poppins";
 }
 .button:hover{
     background-color: #b806a0;
@@ -40,7 +42,7 @@ body{
 }
 .h1{
  margin: auto;
- margin-left: 20%;
+ margin-left: 1%;
  font-weight: bold;
  color: #b806a0;
 }
@@ -90,26 +92,33 @@ body{
 /*  ----- ABOUT ME ----- */
 
 .aboutme{
-    background: url("me.jpg");
+    /* background: url("me.jpg"); */
     display: flex;
-    height: 580px;
+    height: 480px;
     margin-top: 50px;
     margin-bottom: 50px;
-    
+    color: #000;
+    justify-content: center;
+    text-align: center;
+
     
 }
 
 .Mypic{
     width:300px ;
     height: 380px;
-    border:4px solid #ffdcfd;
+    border:4px solid #000;
     border-radius: 520px;
+    margin-top: 20px;
+    margin-left: 10px;
+    
 }
 /* .abtsize{
     margin-top: 20px;
 } */
 .introduction{
     margin: 60px 70px;
+    font-weight: 200;
 }
 
 
@@ -122,21 +131,28 @@ body{
 .skill{
     display: flex;
     justify-content: center;
+    width: 900px;
+    margin-left: 90px;
+    
 }
 .skills{
     box-sizing: border-box;
     display: flex;
     justify-content: center;
+    text-align: center;
     width: 200px;
-    height: 40px;
+    height: 180px;
     background-color: #000;
     color: #fff;
     border: 1px;
     border-radius: 8px;
     padding-top: 10px;
-    margin-left: 10px;
-    margin-bottom: 50px;  
+  
+    margin-right: 40px;  
 }
+ /* .skill::first-child{
+    margin-left: 50px;
+}  */
 .pro{
     display: grid;
     justify-content: center;
